--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>
-        hola
+        green lanter es el mejor
+        
    </h1>
+   <h2> que chulo de cada vez me gusta mas </h2>
 </body>
 </html>
