--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>
-        green lanter es el mejor
-        
+        green lanter es el mejor y le da una paliza a superman
+
    </h1>
    <h2> que chulo de cada vez me gusta mas </h2>
 </body>
